# SDL_image

./: .clang-format  .cvsignore  .editorconfig  .gitignore  .gitmodules  .hgignore  .wikiheaders-options  Android.mk  CHANGES  CHANGES.txt  CMakeLists.txt  COPYING  COPYING.txt  IMG.c  IMG.h  IMG_ImageIO.c  IMG_ImageIO.m  IMG_UIImage.m  IMG_WIC.c  IMG_avif.c  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_jxl.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_ppm.c  IMG_qoi.c  IMG_stb.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_webp.c  IMG_xcf.c  IMG_xpm.c  IMG_xv.c  IMG_xxx.c  INSTALL.md  (+57 more)
.github/: fetch_sdl_vc.ps1
.github/workflows/: main.yml  n3ds.yml  release.yml
.github/workflows/fetch-sdl-artifact/: action.yml  dl_sdl_artifact.js
VisualC/: SDL_image.sln  SDL_image.vcproj  SDL_image.vcxproj  SDL_image.vcxproj.filters  SDL_image_VS2008.vcproj  SDL_image_VS2010.vcxproj  SDL_image_VS2012.vcxproj  SDL_image_VS2013.sln  SDL_image_VS2013.vcxproj  Version.rc
VisualC-WinPhone/: SDL_image-WinPhone_VS2012.vcxproj  SDL_image-WinPhone_VS2012.vcxproj.filters  jpeg-WinPhone_VS2012.vcxproj  jpeg-WinPhone_VS2012.vcxproj.filters  libpng-WinPhone_VS2012.vcxproj  libpng-WinPhone_VS2012.vcxproj.filters  zlib-WinPhone_VS2012.vcxproj  zlib-WinPhone_VS2012.vcxproj.filters
VisualC-WinRT/: SDL_image-UWP.sln  SDL_image-UWP.vcxproj  SDL_image-UWP.vcxproj.filters  SDL_image-WinRT_VS2012.vcxproj  SDL_image-WinRT_VS2012.vcxproj.filters  jpeg-WinRT_VS2012.vcxproj  jpeg-WinRT_VS2012.vcxproj.filters  libpng-WinRT_VS2012.vcxproj  libpng-WinRT_VS2012.vcxproj.filters  zlib-WinRT_VS2012.vcxproj  zlib-WinRT_VS2012.vcxproj.filters
VisualC-WinRT/WinPhone80_VS2012/: SDL_image-WinPhone80.vcxproj  SDL_image-WinPhone80.vcxproj.filters  jpeg-WinPhone80.vcxproj  jpeg-WinPhone80.vcxproj.filters  libpng-WinPhone80.vcxproj  libpng-WinPhone80.vcxproj.filters  libwebp-WinPhone80.vcxproj  libwebp-WinPhone80.vcxproj.filters  zlib-WinPhone80.vcxproj  zlib-WinPhone80.vcxproj.filters
VisualC-WinRT/WinPhone81_VS2013/: SDL_image-WinPhone81.vcxproj  SDL_image-WinPhone81.vcxproj.filters  jpeg-WinPhone81.vcxproj  jpeg-WinPhone81.vcxproj.filters  libpng-WinPhone81.vcxproj  libpng-WinPhone81.vcxproj.filters  libwebp-WinPhone81.vcxproj  libwebp-WinPhone81.vcxproj.filters  zlib-WinPhone81.vcxproj  zlib-WinPhone81.vcxproj.filters
VisualC-WinRT/WinRT80_VS2012/: SDL_image-WinRT80.vcxproj  SDL_image-WinRT80.vcxproj.filters  jpeg-WinRT80.vcxproj  jpeg-WinRT80.vcxproj.filters  libpng-WinRT80.vcxproj  libpng-WinRT80.vcxproj.filters  libwebp-WinRT80.vcxproj  libwebp-WinRT80.vcxproj.filters  zlib-WinRT80.vcxproj  zlib-WinRT80.vcxproj.filters
VisualC-WinRT/WinRT81_VS2013/: SDL_image-WinRT81.vcxproj  jpeg-WinRT81.vcxproj  jpeg-WinRT81.vcxproj.filters  libpng-WinRT81.vcxproj  libpng-WinRT81.vcxproj.filters  libwebp-WinRT81.vcxproj  libwebp-WinRT81.vcxproj.filters  zlib-WinRT81.vcxproj  zlib-WinRT81.vcxproj.filters
VisualC/graphics/lib/: LICENSE.jpeg.txt
VisualC/pkg-support/cmake/: sdl2_image-config-version.cmake  sdl2_image-config.cmake  sdl3_image-config-version.cmake  sdl3_image-config.cmake
VisualC/showanim/: showanim.vcxproj  showanim.vcxproj.filters
VisualC/showimage/: showimage.sln  showimage.vcproj  showimage.vcxproj  showimage.vcxproj.filters  showimage_VS2008.vcproj  showimage_VS2010.vcxproj  showimage_VS2012.vcxproj  showimage_VS2013.vcxproj
VisualCE/: SDL_image.dsp  SDL_image.vcproj  Version.rc
Xcode/: Info-Framework.plist  Info-Framework__Upgraded_.plist  config.xcconfig  mkxcode.csh
Xcode-iOS/SDL_image.xcodeproj/: project.pbxproj
Xcode/SDL/SDL3.xcframework/: Info.plist
Xcode/SDL_image.xcodeproj/: project.pbxproj
Xcode/avif/aom/: config.xcconfig
Xcode/avif/avif.xcodeproj/: project.pbxproj
Xcode/iOS/SDL2.framework/: Info.plist  default.metallib
Xcode/iOS/SDL3.framework/: SDL3.tbd
Xcode/iOS/build-scripts/: iosbuild.sh
Xcode/jxl/jxl.xcodeproj/: project.pbxproj
Xcode/pkg-support/: build.xcconfig
Xcode/pkg-support/resources/: INSTALL.md  ReadMe.txt  SDL_DS_Store
Xcode/png/png.xcodeproj/: project.pbxproj
Xcode/showanim/showanim.xcodeproj/: project.pbxproj
Xcode/showimage/showimage.xcodeproj/: project.pbxproj
Xcode/tvOS/SDL2.framework/: Info.plist  SDL2  default.metallib
Xcode/tvOS/build-scripts/: tvosbuild.sh
Xcode/tvOS/webp.framework/: Info.plist  webp
Xcode/webp/webp.xcodeproj/: project.pbxproj
Xcode_iPhone/: Info-Framework__Upgraded_.plist  mkxcode.csh
Xcode_iPhone/SDL_image.xcodeproj/: project.pbxproj
Xcode_iPhone/exports/: Makefile  SDL_image.x
acinclude/: check_zlib.m4  libtool.m4  sdl.m4  tar.m4
build-scripts/: android-prefab.sh  build-release.py  create-release.py  release-info.json  test-versioning.sh  touch-autofoo.sh  wikiheaders.pl
cmake/: CPackProjectConfig.cmake.in  FindPrivateSDL2.cmake  Findlibjxl.cmake  Findwebp.cmake  PrivateSdlFunctions.cmake  SDL3_imageConfig.cmake.in  sdl3-image.pc.in  sdlmanpages.cmake
cmake/test/: CMakeLists.txt  main.c
debian/: changelog  control  copyright  files  libsdl2-image-dev.install  libsdl2-image.install  rules
docs/: INTRO-androidstudio.md  INTRO-cmake.md  INTRO-emscripten.md  INTRO-visualstudio.md  INTRO-xcode.md  README-migration.md  hello.c  release_checklist.md
examples/: showanim.c  showclipboard.c  showgpuimage.c  showimage.c
include/: SDL_image.h
include/SDL3/: SDL_image.h
include/SDL3_image/: SDL_image.h
mingw/pkg-support/: Makefile
src/: IMG.c  IMG.h  IMG_ImageIO.h  IMG_ImageIO.m  IMG_WIC.c  IMG_WIC.h  IMG_ani.c  IMG_ani.h  IMG_anim.c  IMG_anim.h  IMG_anim_decoder.c  IMG_anim_decoder.h  IMG_anim_encoder.c  IMG_anim_encoder.h  IMG_avif.c  IMG_avif.h  IMG_bmp.c  IMG_gif.c  IMG_gif.h  IMG_gpu.c  IMG_jpg.c  IMG_jxl.c  IMG_lbm.c  IMG_libpng.c  IMG_libpng.h  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_qoi.c  IMG_stb.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_utils.h  IMG_webp.c  IMG_webp.h  IMG_xcf.c  IMG_xpm.c  IMG_xv.c  IMG_xxx.c  (+11 more)
test/: .gitignore  AnimationTestSuite.c  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.os2  README.md  main.c  rgbrgb.ani  rgbrgb.avifs  template.test.in  testanimation.c  testimage.c
(+188 files in other folders)
